# artist-portfolio

./: .gitignore
backend/: Cargo.toml  compose.yml
backend/migrations/: 0001_art_db.sql  0003_art_db.sql
backend/src/: config.rs  main.rs  route.rs  storage.rs
backend/src/api/: collections.rs  error.rs  mediums.rs  mod.rs  traditional.rs  utils.rs  works.rs
backend/src/auth/: handler.rs  jwt_auth.rs  mod.rs  model.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: logo.avif
frontend/src/: App.tsx  config.ts  main.tsx  types.ts
frontend/src/components/: AuthContext.tsx  Footer.tsx  Header.tsx  ProtectedImage.tsx  ProtectedLayout.tsx
frontend/src/components/admin/: AdminCollectionDisplay.tsx  AdminMediumDisplay.tsx  AdminWorkDisplay.tsx
frontend/src/components/art/: CollectionDisplayCard.tsx  CollectionsDisplay.tsx  TraditionalDisplayCard.tsx  WorkDisplay.tsx
frontend/src/components/hooks/: FetchCollection.tsx  FetchCollectionWorks.tsx  FetchCollections.tsx  FetchMediums.tsx  FetchTraditional.tsx  FetchWork.tsx
frontend/src/components/hooks/auth/collection/: CreateCollection.tsx  DeleteCollection.tsx  UpdateCollection.tsx  UpdateCollectionCover.tsx
frontend/src/components/hooks/auth/mediums/: CreateMedium.tsx  (+2 more)
frontend/src/components/hooks/fetch/: FetchAllWorks.tsx  FetchCollection.tsx  FetchCollectionWorks.tsx  FetchCollections.tsx  FetchMediums.tsx  FetchTraditional.tsx  FetchWork.tsx
frontend/src/enums/: RouterPath.ts
frontend/src/lib/: types.ts
frontend/src/lib/assets/: cuteshiney.avif  glowingfih.avif
frontend/src/lib/components/: ArtGrid.svelte  Footer.svelte  Header.svelte
frontend/src/pages/: About.tsx  Admin.tsx  Collection.tsx  Contact.tsx  Digital.tsx  Home.tsx  Login.tsx  NotFound.tsx  Traditional.tsx  Work.tsx
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/traditional/: +page.server.ts  +page.svelte
frontend/src/routes/works/[slug]/: +page.server.ts  +page.svelte
(+3 files in other folders)
