[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres","runtime-tokio-rustls","macros"]}
tokio = { version = "1.52.3", features = ["full"] }
dotenv = "0.15.0"
tower-http = { version = "0.6.10", features = ["fs","cors"] }
jsonwebtoken = "10.4.0"
chrono = "0.4.45"
argon2 = "0.5.3"